--- a/dev/tests/functional/fixture/enterprise2/core/Mage/Customer/uimap/frontend/Customer.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/Customer/uimap/frontend/Customer.yml
@@ -95,3 +95,22 @@ customer_login:
                 empty_captcha: //input[@id='captcha_user_login']/following-sibling::*[text()='This is a required field.' and not(contains(@style,'display: none;'))]
                 incorrect_captcha: //li[normalize-space(@class)='error-msg' and contains(.,'Incorrect CAPTCHA.')]
                 success_forgot_password: //li[normalize-space(@class)='success-msg' and contains(.,'If there is an account associated with %email% you will receive an email with a link to reset your password.')]
+#'Success LogOut page
+customer_logout:
+    mca: customer/account/logoutSuccess/
+    title: Magento Enterprise Edition
+
+#'Login or Create an Account' page with no redirect
+customer_login_refer:
+    mca: customer/account/login/referer/%referer%/
+    title: Customer Login
+    uimap:
+            form:
+                fieldsets:
+                    -
+                        log_in_customer:
+                            buttons:
+                                login: //button[span='Login']
+                            fields:
+                                email: //input[@id='email']
+                                password: //input[@id='pass']
