--- a/fixture/default/core/Mage/PayPal/uimap/paypal_developer/PayPalDeveloper.yml
+++ b/fixture/default/core/Mage/PayPal/uimap/paypal_developer/PayPalDeveloper.yml
@@ -110,17 +110,17 @@ paypal_developer_logged_in:
                                         cancel: //input[@type='submit' and @value='Cancel']
                             -
                                 account_details:
-                                    xpath: //tr[@class='detail'][contains(.,'%accountEmail%')]/following::tr[1]//table[@id='actData']
+                                    xpath: //tr[@class='detail'][contains(.,'%accountEmail%')]/following::tr[1]
                                     links:
                                         view_details: //a[span='View Details']
                                     pageelements:
-                                        account_details_line: //tr
-                                        country: "//tr[td='Country:']//td[3]"
-                                        business_name: "//tr[td='Business Name:']//td[3]"
-                                        credit_card: "//tr[td='Credit Card:']//td[3]"
-                                        bank_account: "//tr[td='Bank Account:']//td[3]"
-                                        balance: "//tr[td='Balance:']//td[3]"
-                                        notes: "//tr[td='Notes:']//td[3]"
+                                        account_details_line: //table[@id='actData']//tr
+                                        country: "//table[@id='actData']//tr[td='Country:']//td[3]"
+                                        business_name: "//table[@id='actData']//tr[td='Business Name:']//td[3]"
+                                        credit_card: "//table[@id='actData']//tr[td='Credit Card:']//td[3]"
+                                        bank_account: "//table[@id='actData']//tr[td='Bank Account:']//td[3]"
+                                        balance: "//table[@id='actData']//tr[td='Balance:']//td[3]"
+                                        notes: "//table[@id='actData']//tr[td='Notes:']//td[3]"
                 -
                     test_email:
                         xpath: //*[@id='nav-menu']//a[text()='Test Email']
