--- a/fixture/community2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
+++ b/fixture/community2/core/Mage/SystemConfiguration/uimap/admin/SystemConfiguration.yml
@@ -21,10 +21,10 @@ system_configuration:
                         xpath: //a[contains(@href, 'edit/section/catalog/')]
                         fieldsets:
                             -
-                                product_creation:
-                                    xpath: //fieldset[@id='catalog_product_creation']
+                                fields_masks:
+                                    xpath: //fieldset[@id='catalog_fields_masks']
                                     fields:
-                                        sku_mask: //*[@id='catalog_product_creation_sku_mask']
+                                        sku_mask: //*[@id='catalog_fields_masks_sku_mask']
 
 system_configuration_tabs:
     uimap: *systemConfiguration
