--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -20,8 +20,11 @@ load:
   - ../../../pub/js/jquery/slimScroll/slimScroll.min.js
   - ../../../app/code/core/Mage/Page/view/frontend/js/cookies.js
   - ../../../app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
+  - ../../../pub/js/mage/adminhtml/ajax-setup.js
+  - ../../../pub/js/jquery/jquery.tmpl.min.js
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
   - ../../../dev/tests/js/testsuite/mage/*.js
   - ../../../dev/tests/js/testsuite/mage/validation/*.js
   - ../../../dev/tests/js/testsuite/mage/design_editor/*.js
+  - ../../../dev/tests/js/testsuite/mage/loader/*.js
