--- a/fixture/enterprise2/core/Mage/CmsWidget/data/CmsWidget.yml
+++ b/fixture/enterprise2/core/Mage/CmsWidget/data/CmsWidget.yml
@@ -91,7 +91,7 @@ wishlist_search_widget:
     widget_options:
         quick_search_form: All Forms
 
-#<------------------------- Gif Registry search---------------------------------->
+#<------------------------- Gif Registry search-------------------------------->
 giftregistry_search_widget:
     settings:
         type: Gift Registry Search
@@ -104,7 +104,7 @@ giftregistry_search_widget:
     widget_options:
         quick_search_form: All Forms
 
-#<------------------------- Catalog Events Carousel ---------------------------------->
+#<------------------------- Catalog Events Carousel --------------------------->
 catalog_events_carousel_widget:
     settings:
         type: Catalog Events Carousel
@@ -168,7 +168,7 @@ wishlist_search_widget_req:
     widget_options:
         quick_search_form: All Forms
 
-#<-------------------------Gif Registry search---------------------------->
+#<-------------------------Gif Registry search------------------------------->
 giftregistry_search_widget_req:
     settings:
         type: Gift Registry Search
@@ -198,99 +198,87 @@ catalog_events_carousel_widget_req:
     widget_options:
         frame_size: 5
         scroll: 2
-#<-------------------------------CMS Page Link Widget-------------------------->
-cms_page_link_widget_req:
+
+#<--------------------------Banner Rotator Settings--------------------------->
+banner_rotator_settings:
+    settings:
+        type: Banner Rotator
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------CMS Hierarchy Node Link Settings------------------>
+cms_hierarchy_node_link_settings:
+    settings:
+        type: CMS Hierarchy Node Link
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------CMS Page Link Settings---------------------------->
+cms_page_link_settings:
     settings:
         type: CMS Page Link
-        design_package_theme: Default/Default
-    frontend_properties:
-        assign_to_store_views: All Store Views
-        widget_instance_title: CMS Page Link %randomize%
-        sort_order: %noValue%
-    layout_updates:
-        layout_1:
-            select_display_on: Anchor Categories
-            select_block_reference: Right Column
-            select_template: CMS Page Link Block Template
-            choose_options:
-                category_path: %noValue%
-        layout_2:
-            select_display_on: Non-Anchor Categories
-            select_block_reference: Page Footer
-            select_template: CMS Page Link Inline Template
-            choose_options:
-                category_path: %noValue%
-        layout_3:
-            select_display_on: All Product Types
-            select_block_reference: Shopping Cart Sidebar Extra Actions
-            select_template: CMS Page Link Block Template
-            choose_options:
-                product_1:
-                    filter_sku: %product_1%
-                product_2:
-                    filter_sku: %product_2%
-                product_3:
-                    filter_sku: %product_3%
-                product_4:
-                    filter_sku: %product_4%
-                product_5:
-                    filter_sku: %product_5%
-                product_6:
-                    filter_sku: %product_6%
-        layout_4:
-            select_display_on: Simple Product
-            select_block_reference: Page Bottom
-            select_template: CMS Page Link Block Template
-            choose_options:
-                product_1:
-                    filter_sku: %product_1%
-        layout_5:
-            select_display_on: Grouped Product
-            select_block_reference: Product Extra Info
-            select_template: CMS Page Link Block Template
-            choose_options:
-                product_2:
-                    filter_sku: %product_2%
-        layout_6:
-            select_display_on: Configurable Product
-            select_block_reference: Left Column
-            select_template: CMS Page Link Block Template
-            choose_options:
-                product_3:
-                    filter_sku: %product_3%
-        layout_7:
-            select_display_on: Virtual Product
-            select_block_reference: Main Content Area
-            select_template: CMS Page Link Block Template
-            choose_options:
-                product_4:
-                    filter_sku: %product_4%
-        layout_8:
-            select_display_on: Bundle Product
-            select_block_reference: Page Top
-            select_template: CMS Page Link Inline Template
-            choose_options:
-                product_5:
-                    filter_sku: %product_5%
-        layout_9:
-            select_display_on: Downloadable Product
-            select_block_reference: Alert Urls
-            select_template: CMS Page Link Inline Template
-            choose_options:
-                product_6:
-                    filter_sku: %product_6%
-        layout_10:
-            select_display_on: All Pages
-            select_block_reference: Page Header
-            select_template: CMS Page Link Block Template
-        layout_11:
-            select_display_on: Specified Page
-            select_page: CMS Home Page
-            select_block_reference: Page Top
-            select_template: CMS Page Link Block Template
-    widget_options:
-        anchor_custom_text: custom_text
-        anchor_custom_title: custom_title
-        chosen_option:
-            filter_url_key: no-route
+        design_package_theme: Enterprise / Enterprise
 
+#<--------------------------Banner Rotator Settings--------------------------->
+cms_static_block_settings:
+    settings:
+        type: CMS Static Block
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Catalog Category Link Settings-------------------->
+catalog_category_link_settings:
+    settings:
+        type: Catalog Category Link
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Catalog Events Carousel Settings------------------>
+catalog_events_carousel_settings:
+    settings:
+        type: Catalog Events Carousel
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Catalog New Products List Settings---------------->
+catalog_new_products_list_settings:
+    settings:
+        type: Catalog New Products List
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Catalog Product Link Settings--------------------->
+catalog_product_link_settings:
+    settings:
+        type: Catalog Product Link
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Gift Registry Search Settings--------------------->
+gift_registry_search_settings:
+    settings:
+        type: Gift Registry Search
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Order By Sku Settings----------------------------->
+order_by_sku_settings:
+    settings:
+        type: Order by SKU
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Order and Return Settings------------------------->
+orders_and_returns_settings:
+    settings:
+        type: Orders and Returns
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Recently Compared Products Settings--------------->
+recently_compared_products_settings:
+    settings:
+        type: Recently Compared Products
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Recently Viewed Products Settings----------------->
+recently_viewed_products_settings:
+    settings:
+        type: Recently Viewed Products
+        design_package_theme: Enterprise / Enterprise
+
+#<--------------------------Wishlist Search Settings-------------------------->
+wishlist_search_settings:
+    settings:
+        type: Wishlist Search
+        design_package_theme: Enterprise / Enterprise
